# motherduck-examples

./: .gitignore  AGENTS.md  LICENSE  README.md  catalog.schema.json
dbt-churn-prediction/: .env.example  .gitignore  README.md  meta.yml  profiles.yml  pyproject.toml
dbt-churn-prediction/flights/: README.md  create_flight.sql  flight.py
dbt-churn-prediction/macros/: churn_features.sql
dbt-churn-prediction/models/: _models.yml
dbt-churn-prediction/models/marts/: fct_churn_segment_rates.sql  fct_customer_churn_labels.sql  fct_customer_churn_scores_daily.sql  fct_customer_features_daily.sql  fct_customer_features_historical.sql  mart_retention_queue_daily.sql
dbt-churn-prediction/models/staging/: _sources.yml  stg_customers.sql  stg_memberships.sql  stg_payments.sql  stg_usage_events.sql
dbt-churn-prediction/scripts/: train_python_churn_models.py
dbt-churn-prediction/seeds/: _seeds.yml  churn_risk_rules.csv  churn_score_weights.csv  raw_customers.csv  raw_payments.csv
dbt-churn-prediction/tests/: assert_one_historical_feature_row_per_customer_per_day.sql  assert_one_score_row_per_customer_per_day.sql  assert_risk_scores_between_zero_and_100.sql  assert_scores_between_zero_and_one.sql  assert_segment_rates_between_zero_and_one.sql  assert_subscription_censoring_consistent.sql  assert_subscription_duration_positive.sql
dbt-customer-segmentation/: .env.example  .gitignore  README.md  dbt_project.yml  profiles.yml  pyproject.toml
dbt-customer-segmentation/models/: _models.yml
dbt-customer-segmentation/models/marts/: fct_household_feature_vectors.sql  fct_household_features.sql  fct_household_features_long.sql  fct_household_kmeans_segments.py  fct_household_promotion_metrics.sql  fct_household_segment_distances.sql  fct_household_segments.sql  fct_segment_demographic_residuals.sql  fct_segment_feature_profiles.sql  mart_customer_segments.sql
dbt-customer-segmentation/models/staging/: _sources.yml  stg_campaign_households.sql  stg_campaigns.sql  stg_coupon_redemptions.sql  stg_coupons.sql  stg_households.sql  stg_products.sql  stg_transactions.sql
dbt-customer-segmentation/seeds/: _seeds.yml  raw_campaign_households.csv  raw_campaigns.csv  raw_coupon_redemptions.csv  raw_coupons.csv  raw_households.csv  raw_products.csv  raw_transactions.csv  segment_centroids.csv  segment_playbook.csv
dbt-customer-segmentation/tests/: assert_centroid_features_are_scored.sql  assert_demographic_expected_counts_positive.sql  assert_demographic_residual_grid_complete.sql  assert_each_segment_has_profile_rows.sql  assert_every_centroid_segment_has_playbook.sql  assert_kmeans_alignment_present.sql  assert_kmeans_cluster_ids_in_range.sql  assert_one_centroid_per_segment_feature.sql  assert_one_distance_per_household_segment.sql  assert_one_kmeans_row_per_household.sql  assert_segment_centroid_weights_positive.sql  assert_segment_confidence_between_zero_and_one.sql  assert_segment_distances_nonnegative.sql
dlt-db-replication/: .gitignore  README.md  pyproject.toml  sql_database_pipeline.py  timing_logs.py
dlt-db-replication/.dlt/: config.toml
nba-box-scores/flight/: README.md  pyproject.toml
nba-box-scores/flight/scripts/: deploy_flights.py
nba-box-scores/flight/tests/: test_config_env.py  test_deploy_flights.py  test_loader.py  test_parsers.py  (+1 more)
python-ingestion/: .env.template  Makefile  README.md  pyproject.toml
python_ingestion/: Makefile  README.md  load_to_motherduck_large.py  load_to_motherduck_small.py  pyproject.toml  table_buffer.py
python_ingestion/tests/: test_load_to_motherduck_large.py  test_load_to_motherduck_small.py
(+422 files in other folders)
