[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nba-box-scores-pipeline"
version = "0.1.0"
description = "Python ingest pipeline for nba_box_scores_v3, deployed as MotherDuck Flights."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "MotherDuck Labs" },
]
keywords = ["nba", "motherduck", "flights", "ingest"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
# duckdb is capped below 1.5.3: MotherDuck's server rejects newer client
# versions ("latest supported version is v1.5.2"). The cap is what the
# flight's `md:` connection needs — local tests use :memory: and don't care.
dependencies = [
    "duckdb>=1.3.0,<1.5.3",
    "httpx>=0.27.0",
    "controllog @ git+https://github.com/motherduckdb/labs#subdirectory=projects/controllog",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pydantic>=2.0",  # used by deploy.py / flight_schema.py once they land
]

[project.urls]
Homepage = "https://github.com/motherduckdb/motherduck-examples/tree/main/nba-box-scores"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nba_box_scores_pipeline"]
